--- a/src/Layout/Footer/footer.css
+++ b/src/Layout/Footer/footer.css
@@ -11,7 +11,7 @@ footer {
 }
 
 footer svg {
-  margin: 0 0.75em 0 0.75em;
+  margin: 0 0.75rem 0 0.75rem;
 }
 
 footer svg:hover {
